[FIX] on small screens right align amount

--- a/addons/care_config_relaunch_v2/static/src/css/care_relaunch_v2.css
+++ b/addons/care_config_relaunch_v2/static/src/css/care_relaunch_v2.css
@@ -210,6 +210,12 @@ span.price_donate_suggested_outer {
     font-size: 30px;
 }
 
+@media screen and (max-width: 500px) {
+    #wsd_checkout_form > div > div.product_price.mt16 > h4.oe_price_h4.css_editable_mode_hidden.decimal_precision > div > span > input {
+        text-align: right;
+    }
+}
+
 .price_donate_suggested_currency {
     display: inline-block;
     margin-left: 10px !important;
